--- a/index_param.html
+++ b/index_param.html
@@ -287,9 +287,10 @@
             </div>
 
         </div>
-
-
-        <div id="feedback" class="row" style="height: 30px;"></div>
+        <div class="row " style="height: 10px;">
+        <P id="feedback"  ALIGN=LEFT></P> 
+        </div>   
+        <!-- <div id="feedback" class="row" style="height: 30px;"></div> -->
 
     </div>
 </body>
